--- a/app/src/main/res/layout/fragment_new_screen.xml
+++ b/app/src/main/res/layout/fragment_new_screen.xml
@@ -15,49 +15,47 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/san_francisco"
-        android:text="NEW SCREEN - PROMINIT"
+        android:text="SELECTED DATES"
+        android:textColor="@color/blue"
+        android:textSize="29sp"
         android:textStyle="bold"
-        android:textColor="#0B0000"
-        android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.069"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.115" />
+        app:layout_constraintVertical_bias="0.113" />
 
     <TextView
         android:id="@+id/dateA"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="290dp"
+        android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="91dp"
         android:background="@drawable/date_button"
-        android:gravity="center"
         android:fontFamily="@font/san_francisco"
+        android:gravity="center"
         android:text="prvi datum"
-        android:textAllCaps="true"
-        android:textColor="@color/black"
-        android:textSize="22sp"
+        android:textColor="#000000"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.855"
+        app:layout_constraintHorizontal_bias="0.847"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chooseDate"
-        app:layout_constraintVertical_bias="0.019" />
+        app:layout_constraintVertical_bias="0.021" />
 
     <TextView
         android:id="@+id/dateD"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="290dp"
+        android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:background="@drawable/date_button"
         android:fontFamily="@font/san_francisco"
         android:gravity="center"
         android:text="drugi datum"
-        android:textAllCaps="true"
-        android:textColor="@color/black"
-        android:textSize="22sp"
+        android:textColor="#000000"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.855"
@@ -70,11 +68,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/san_francisco"
-        android:text="FROM"
-        android:textColor="#0B0909"
-        android:textSize="26sp"
+        android:text="From"
+        android:textColor="@color/blue"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/dateOfArrival"
+        app:layout_constraintEnd_toStartOf="@+id/dateA"
         app:layout_constraintHorizontal_bias="0.425"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chooseDate"
@@ -85,11 +83,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/san_francisco"
-        android:text="TO"
-        android:textColor="#0B0909"
-        android:textSize="26sp"
+        android:text="To"
+        android:textColor="@color/blue"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/dateOfDeparture"
+        app:layout_constraintEnd_toStartOf="@+id/dateD"
         app:layout_constraintHorizontal_bias="0.425"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/from"
@@ -131,22 +129,43 @@
 
     <TextView
         android:id="@+id/shippp"
-        android:layout_width="155dp"
-        android:layout_height="55dp"
-        android:layout_marginBottom="252dp"
-        android:topRightRadius="20dp"
-        android:topLeftRadius="20dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="244dp"
+        android:background="@drawable/date_button"
         android:bottomLeftRadius="20dp"
         android:bottomRightRadius="20dp"
-        android:background="@drawable/date_button"
         android:fontFamily="@font/san_francisco"
         android:gravity="center"
         android:text="ship"
         android:textAllCaps="true"
-        android:textColor="@color/black"
+        android:textColor="#000000"
         android:textSize="22sp"
+        android:textStyle="bold"
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.781"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dateD"
+        app:layout_constraintVertical_bias="0.2" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="180dp"
+        android:fontFamily="@font/san_francisco"
+        android:gravity="center"
+        android:maxLines="2"
+        android:text="Selected boat"
+        android:textColor="@color/blue"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.059"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/from" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
