--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -14,10 +14,11 @@
         android:layout_marginTop="30dp"
         android:fontFamily="@font/san_francisco"
         android:text="Payment"
-        android:textStyle="bold"
         android:textAllCaps="true"
         android:textColor="@color/blue"
         android:textSize="33dp"
+        android:textStyle="bold"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,90 +27,147 @@
         android:id="@+id/cardNumber"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="88dp"
+        android:background="@drawable/date_button"
         android:fontFamily="@font/san_francisco"
-        android:hint="Card number"
-        android:textSize="22sp"
         android:paddingLeft="10dp"
-        android:layout_marginTop="50dp"
         android:textColor="@color/blue"
-        android:textColorHint="@color/blue"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
         android:id="@+id/cardCcv"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
+        style="@style/Widget.AppCompat.AutoCompleteTextView"
+        android:layout_width="60dp"
+        android:layout_height="49dp"
+        android:layout_marginBottom="77dp"
+        android:background="@drawable/date_button"
         android:fontFamily="@font/san_francisco"
-        android:hint="CCV"
         android:paddingLeft="10dp"
-        android:textSize="22sp"
         android:textColor="@color/blue"
-        android:textColorHint="@color/blue"
-        app:layout_constraintBottom_toTopOf="@+id/cardDate"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@+id/cardName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardNumber" />
+        app:layout_constraintHorizontal_bias="0.33"
+        app:layout_constraintStart_toEndOf="@+id/cardDate"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/cardDate"
         style="@style/Widget.AppCompat.Button"
-        android:layout_width="300dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="364dp"
         android:background="@drawable/date_button"
         android:textColor="@color/blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.306"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardCcv"/>
+        app:layout_constraintTop_toBottomOf="@+id/cardNumber"
+        app:layout_constraintVertical_bias="0.468" />
 
     <EditText
         android:id="@+id/cardName"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="75dp"
-        android:textSize="22sp"
-        android:hint="First name"
+        android:layout_marginTop="76dp"
+        android:background="@drawable/date_button"
         android:fontFamily="@font/san_francisco"
         android:paddingLeft="10dp"
         android:textColor="@color/blue"
-        android:textColorHint="@color/blue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardDate" />
-
-    <EditText
-        android:id="@+id/cardSurname"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="192dp"
         android:textSize="22sp"
-        android:hint="Last Name"
-        android:fontFamily="@font/san_francisco"
-        android:paddingLeft="10dp"
-        android:textColor="@color/blue"
-        android:textColorHint="@color/blue"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardName" />
-
-    <Button
-        android:id="@+id/btn_pay"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/button_rectangle"
-        android:text="Pay"
-        android:fontFamily="@font/san_francisco"
-        android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardDate" />
+
+    <Button
+        android:id="@+id/btn_pay"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/button_rectangle"
+        android:fontFamily="@font/san_francisco"
+        android:text="Pay"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/cardNumber"
-        app:layout_constraintVertical_bias="0.891" />
+        app:layout_constraintVertical_bias="0.705" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/san_francisco"
+        android:text="Card Number"
+        android:textColor="@color/blue"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/cardNumber"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.299"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="14dp"
+        android:fontFamily="@font/san_francisco"
+        android:text="Expiration Date"
+        android:textColor="@color/blue"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/cardDate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.309"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardNumber"
+        app:layout_constraintVertical_bias="0.344" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="25dp"
+        android:fontFamily="@font/san_francisco"
+        android:text="Card Owner Name"
+        android:textColor="@color/blue"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/cardName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.346"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardDate"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="14dp"
+        android:fontFamily="@font/san_francisco"
+        android:text="CVV"
+        android:textColor="@color/blue"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/cardCcv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.402"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/cardNumber"
+        app:layout_constraintVertical_bias="0.363" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
