--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -16,8 +16,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/availableDocks"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp" />
 
     <View
@@ -36,32 +35,17 @@
         app:layout_constraintBottom_toTopOf="@id/map"/>
 
     <TextView
-        android:id="@+id/availableDocks"
+        android:id="@+id/numberDock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="48dp"
         android:fontFamily="@font/san_francisco"
-        android:text="Available docks"
-        android:textAllCaps="true"
+        android:text="1"
         android:textColor="@color/blue"
         android:textSize="33sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/numberDock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/san_francisco"
-        android:text="1"
-        android:textColor="@color/blue"
-        android:textSize="35sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.286"
+        app:layout_constraintHorizontal_bias="0.316"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/map" />
 
@@ -69,16 +53,17 @@
         android:id="@+id/dockNaming"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
         android:layout_marginStart="28dp"
+        android:layout_marginTop="55dp"
         android:layout_marginEnd="24dp"
         android:fontFamily="@font/san_francisco"
         android:text="Dock:"
+        android:textAllCaps="true"
         android:textColor="@color/blue"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/numberDock"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/map" />
 
@@ -86,14 +71,14 @@
         android:id="@+id/priceDock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="48dp"
         android:fontFamily="@font/san_francisco"
         android:text="500"
         android:textColor="@color/blue"
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.78"
+        app:layout_constraintHorizontal_bias="0.66"
         app:layout_constraintStart_toEndOf="@+id/numberDock"
         app:layout_constraintTop_toBottomOf="@+id/map" />
 
@@ -101,14 +86,14 @@
         android:id="@+id/dolars"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="48dp"
         android:fontFamily="@font/san_francisco"
         android:text="$"
-        android:textStyle="bold"
         android:textColor="@color/blue"
         android:textSize="35sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.153"
         app:layout_constraintStart_toEndOf="@+id/priceDock"
         app:layout_constraintTop_toBottomOf="@+id/map" />
 
@@ -201,6 +186,7 @@
         android:layout_gravity="center_horizontal"
         android:background="@drawable/button_rectangle"
         android:fontFamily="@font/san_francisco"
+        android:layout_marginBottom="15dp"
         android:text="Payment"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
