--- a/app/src/main/res/drawable/ic_icon_clicked.xml
+++ b/app/src/main/res/drawable/ic_icon_clicked.xml
@@ -6,13 +6,13 @@
   <path
       android:pathData="M19,19m-19,0a19,19 0,1 1,38 0a19,19 0,1 1,-38 0"
       android:strokeWidth="1"
-      android:fillColor="#FFFFFF"
+      android:fillColor="#FB0202"
       android:fillType="evenOdd"
       android:strokeColor="#00000000"/>
   <path
       android:pathData="M19,19m-14,0a14,14 0,1 1,28 0a14,14 0,1 1,-28 0"
       android:strokeWidth="1"
-      android:fillColor="#4980DF"
+      android:fillColor="#FFFF"
       android:fillType="evenOdd"
       android:strokeColor="#00000000"/>
 </vector>
