--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -27,26 +27,20 @@
         app:layout_constraintTop_toBottomOf="@+id/map"
         tools:layout_editor_absoluteX="-28dp" />
 
-    <View
-        android:id="@+id/topLine"
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:background="@color/blue"
-        app:layout_constraintBottom_toTopOf="@id/map"/>
-
     <TextView
         android:id="@+id/numberDock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
+        android:layout_marginStart="15dp"
         android:fontFamily="@font/san_francisco"
-        android:text="1"
+        android:text="Not available"
         android:textColor="@color/blue"
         android:textSize="33sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.316"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/dockNaming"
         app:layout_constraintTop_toBottomOf="@+id/map" />
 
     <TextView
@@ -73,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:fontFamily="@font/san_francisco"
-        android:text="500"
+        android:text="0"
         android:textColor="@color/blue"
         android:textSize="35sp"
         android:textStyle="bold"
@@ -119,7 +113,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginBottom="12dp"
         android:fontFamily="@font/san_francisco"
-        android:text="Vertical"
+        android:text="-"
         android:textColor="@color/blue"
         android:textSize="23sp"
         app:layout_constraintBottom_toTopOf="@+id/dateOfArrivalDock2"
