--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,10 +11,11 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
+
         <ImageView
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:src="@drawable/kvazilogo">
+            android:src="@drawable/android_circleshadow">
         </ImageView>
 
         <EditText
@@ -26,7 +27,7 @@
             android:layout_marginEnd="20dp"
             android:fontFamily="@font/san_francisco"
             android:paddingLeft="10dp"
-            android:drawableLeft="@drawable/ic_person_black_24dp"
+            android:drawableStart="@drawable/ic_person_black_24dp"
             android:drawablePadding="10dp"
             android:hint="Username"
             android:textColor="@color/blue"
@@ -41,12 +42,13 @@
             android:layout_marginEnd="20dp"
             android:fontFamily="@font/san_francisco"
             android:paddingLeft="10dp"
-            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
+            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
             android:drawablePadding="10dp"
             android:hint="Password"
             android:inputType="textPassword"
             android:textColor="@color/blue"
             android:textColorHint="@color/blue" />
+
         <Button
             android:id="@+id/login_button"
             android:layout_width="250dp"
@@ -57,6 +59,7 @@
             android:layout_marginTop="30dp"
             android:textSize="18sp"
             android:text="Login" />
+
         <Button
             android:id="@+id/registration"
             android:layout_width="250dp"
@@ -68,6 +71,7 @@
             android:textColor="@color/colorPrimary"
             android:textSize="19sp"
             android:text="Register me" />
+
         <Button
             android:id="@+id/forgotpassword"
             android:layout_width="250dp"
@@ -80,5 +84,7 @@
             android:textColor="@color/colorPrimary"
             android:textSize="12sp"
             android:text="I forgot my password" />
+
     </LinearLayout>
+
 </RelativeLayout>
