--- a/app/src/main/res/navigation/root_navigation_graph.xml
+++ b/app/src/main/res/navigation/root_navigation_graph.xml
@@ -184,6 +184,12 @@
         <argument
             android:name="resId"
             app:argType="string"/>
+        <argument
+            android:name="arrivalDate"
+            app:argType="string"/>
+        <argument
+            android:name="departureDate"
+            app:argType="string"/>
     </fragment>
     <fragment
         android:id="@+id/successFragment"
@@ -195,6 +201,12 @@
             app:destination="@id/profileFragment" />
         <argument
             android:name="resId"
+            app:argType="string"/>
+        <argument
+            android:name="arrivalDate"
+            app:argType="string"/>
+        <argument
+            android:name="departureDate"
             app:argType="string"/>
     </fragment>
     <fragment
