popravljen add_ship

--- a/app/src/main/res/layout/fragment_add_ship.xml
+++ b/app/src/main/res/layout/fragment_add_ship.xml
@@ -58,7 +58,6 @@
         android:padding="12dp"
         android:textColor="@color/black"
         android:textColorHint="@color/blue"
-        app:layout_constraintBottom_toTopOf="@+id/spinnerName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,34 +68,34 @@
         android:id="@+id/spinnerName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="25dp"
+        android:fontFamily="@font/san_francisco"
         android:text="Select ship size:"
         android:textAllCaps="true"
         android:textColor="@color/blue"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
-        android:fontFamily="@font/san_francisco"
-        android:textStyle="bold"
         android:textSize="22sp"
-        app:layout_constraintBottom_toTopOf="@+id/spinner"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/shipRegistration" />
 
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="168dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="25dp"
         android:background="@color/blue"
         android:fontFamily="@font/san_francisco"
         android:padding="12dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/saveShip"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerName" />
 
     <Button
         android:id="@+id/saveShip"
