--- a/app/src/main/res/layout/fragment_new_screen.xml
+++ b/app/src/main/res/layout/fragment_new_screen.xml
@@ -13,9 +13,9 @@
         android:id="@+id/chooseDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="20dp"
         android:fontFamily="@font/san_francisco"
-        android:text="SELECTED DATES"
+        android:text="SELECTED DATES:"
         android:textColor="@color/blue"
         android:textSize="29sp"
         android:textStyle="bold"
@@ -95,37 +95,34 @@
 
     <Button
         android:id="@+id/availability"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="15dp"
+        android:layout_width="260dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:background="@drawable/button_rectangle"
         android:fontFamily="@font/san_francisco"
-        android:text="AVAILABILITY"
+        android:text="Availability"
+        android:textAllCaps="true"
+        android:paddingVertical="10dp"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ship"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976" />
 
     <ImageButton
         android:id="@+id/profile"
-        android:layout_width="53dp"
-        android:layout_height="53dp"
-        android:layout_margin="5dp"
-        android:layout_marginBottom="138dp"
+        android:layout_width="47dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
         android:background="@color/white"
         android:clickable="true"
         android:src="@drawable/profile_icon_foreground"
-        app:layout_constraintBottom_toTopOf="@+id/dateOfArrival"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/shippp"
