--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -18,32 +17,31 @@
         android:textColor="@color/blue"
         android:textSize="33dp"
         android:textStyle="bold"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
     <EditText
         android:id="@+id/cardNumber"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="108dp"
         android:background="@drawable/date_button"
         android:fontFamily="@font/san_francisco"
         android:paddingLeft="10dp"
         android:textColor="@color/blue"
         android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.019" />
     <EditText
         android:id="@+id/cardCcv"
         style="@style/Widget.AppCompat.AutoCompleteTextView"
         android:layout_width="60dp"
         android:layout_height="49dp"
-        android:layout_marginBottom="77dp"
+        android:layout_marginBottom="100dp"
         android:background="@drawable/date_button"
         android:fontFamily="@font/san_francisco"
         android:paddingLeft="10dp"
@@ -52,47 +50,44 @@
         app:layout_constraintBottom_toTopOf="@+id/cardName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.33"
-        app:layout_constraintStart_toEndOf="@+id/cardDate"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
+        app:layout_constraintStart_toEndOf="@+id/cardDate" />
     <Button
         android:id="@+id/cardDate"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="364dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="105dp"
+        android:layout_marginBottom="100dp"
         android:background="@drawable/date_button"
+        android:fontFamily="@font/san_francisco"
         android:textColor="@color/blue"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.306"
+        app:layout_constraintBottom_toTopOf="@+id/cardName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardNumber"
-        app:layout_constraintVertical_bias="0.468" />
-
+        app:layout_constraintVertical_bias="1.0" />
     <EditText
         android:id="@+id/cardName"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
+        android:layout_marginBottom="104dp"
         android:background="@drawable/date_button"
         android:fontFamily="@font/san_francisco"
         android:paddingLeft="10dp"
         android:textColor="@color/blue"
         android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_pay"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardDate" />
-
+        app:layout_constraintStart_toStartOf="parent" />
     <Button
         android:id="@+id/btn_pay"
-        android:layout_width="180dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/button_rectangle"
         android:fontFamily="@font/san_francisco"
+        android:paddingVertical="10dp"
         android:text="Pay"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -100,8 +95,7 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/cardNumber"
-        app:layout_constraintVertical_bias="0.705" />
-
+        app:layout_constraintVertical_bias="0.749" />
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -114,28 +108,24 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/cardNumber"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.299"
+        app:layout_constraintHorizontal_bias="0.265"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.0" />
-
+        app:layout_constraintVertical_bias="1.0" />
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginStart="80dp"
         android:layout_marginBottom="14dp"
         android:fontFamily="@font/san_francisco"
         android:text="Expiration Date"
         android:textColor="@color/blue"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/cardDate"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.309"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardNumber"
-        app:layout_constraintVertical_bias="0.344" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.992" />
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
@@ -148,16 +138,15 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/cardName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.346"
+        app:layout_constraintHorizontal_bias="0.307"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardDate"
-        app:layout_constraintVertical_bias="0.0" />
-
+        app:layout_constraintVertical_bias="1.0" />
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginEnd="96dp"
         android:layout_marginBottom="14dp"
         android:fontFamily="@font/san_francisco"
         android:text="CVV"
@@ -165,9 +154,6 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/cardCcv"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.402"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/cardNumber"
-        app:layout_constraintVertical_bias="0.363" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.992" />
 </androidx.constraintlayout.widget.ConstraintLayout>
